# bees_tracker

./: CMakeLists.txt  LICENSE  README.md  readme.md
data/: download_data.sh
documentation/doxygen/: config.in
eval/: graphsGenerator.ipynb  graphsGenerator.py  imgView.py
implementation/Inc/: FrameLoader.hpp  GlobalConcurrency.hpp  InputCollection.hpp  Logger.hpp  Parameters.hpp  Step1Naive.hpp  Step1Optimized.hpp  Step1Simplified.hpp  Step2Parallel.hpp  Step2Sequential.hpp  Step3.hpp  Structures.hpp  WorkManager.hpp
implementation/Src/: GlobalConcurrency.cpp  InputCollection.cpp  Logger.cpp  Step1Naive.cpp  Step1Optimized.cpp  Step1Simplified.cpp  Step2Parallel.cpp  Step2Sequential.cpp  Step3.cpp
tests/: benchmarks.cpp  example.cpp
